--- a/client/bootstrap.css
+++ b/client/bootstrap.css
@@ -1092,7 +1092,6 @@ input[type="color"],
 .uneditable-input {
   display: inline-block;
   padding: 4px 6px;
-  margin-bottom: 10px;
 
   color: #555555;
   vertical-align: middle;
@@ -1127,7 +1126,7 @@ input[type="search"],
 input[type="tel"],
 input[type="color"],
 .uneditable-input {
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.07);
   border-radius: 2px;
   border: 1px rgb(162, 162, 162) solid;
 }
@@ -1149,7 +1148,6 @@ input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
   border: 1px rgb(162, 162, 162) solid;
-  /*background-color: rgb(243, 243, 243);*/
   outline: 0;
   outline: thin dotted \9;
   /* IE6-9 */
